# file-organizer

./: AGENTS.md  README.md  pyproject.toml
docs/: PROJECT_PLAN.md  README.md  milestone-filesystem-scanning.md  milestone-mcp-server-foundations.md  milestone-memory-prompts.md  milestone-rule-engine.md  milestone-setup.md
src/agentic_file_organizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/organizer/: __init__.py  config.py  indexing.py  llm.py  models.py  rules.py  staging.py
src/organizer/cli/: __init__.py  main.py
src/organizer/runtime/: __init__.py  prompts.py
src/organizer/server/: __init__.py  app.py  context.py  filesystem.py  memory.py  rules.py
src/organizer/storage/: __init__.py  index.py  memory.py
tests/: test_cli_llm.py  test_cli_memory.py  test_config.py  test_indexing.py  test_llm.py  test_prompts.py  test_rules.py  test_server_app.py  test_server_filesystem.py  test_server_memory.py  test_server_rules.py  test_staging.py  test_storage_index.py  test_storage_memory.py
